// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsCard - render correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#334FFA",
      "borderRadius": 20,
      "elevation": 6,
      "minWidth": 280,
      "padding": 20,
      "shadowColor": "rgba(0, 0, 0, 0.5)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3.84,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "avenir",
        },
        {
          "color": "#ffffff",
          "fontSize": 16,
          "fontWeight": "800",
          "lineHeight": 22,
          "marginBottom": 7,
        },
      ]
    }
  >
    Hello Femsa
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "avenir",
        },
        {
          "alignSelf": "center",
          "color": "#ffffff",
          "fontSize": 32,
          "fontWeight": "800",
          "lineHeight": 44,
          "marginBottom": 50,
        },
      ]
    }
  >
    10,000.00 pts
  </Text>
</View>
`;

exports[`PointsCard - render correctly loading true 1`] = `
<View
  style={
    {
      "backgroundColor": "#334FFA",
      "borderRadius": 20,
      "elevation": 6,
      "minWidth": 280,
      "padding": 20,
      "shadowColor": "rgba(0, 0, 0, 0.5)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3.84,
    }
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "avenir",
        },
        {
          "color": "#ffffff",
          "fontSize": 16,
          "fontWeight": "800",
          "lineHeight": 22,
          "marginBottom": 7,
        },
      ]
    }
  >
    Hello Femsa
  </Text>
  <ActivityIndicator
    color="white"
    style={
      {
        "alignSelf": "center",
        "marginVertical": 30,
      }
    }
  />
</View>
`;
